--- a/examples/chatserver/templates/chat_base.html
+++ b/examples/chatserver/templates/chat_base.html
@@ -33,6 +33,7 @@
 					<li class="{% active request 'group_chat' %}">
 						<a href="{% url 'group_chat' %}">Group Chat</a>
 					</li>
+                    <li><a>收到新消息:<span id="news">0</span>个</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown" style="margin-right: 12em;">
